NATTQA-ENV/force-app/main/default/objects/WebCart/WebCart.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>