NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Contact_Point_Address__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contact_Point_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>