NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_CTM_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>NATT_CTM_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>