NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_CTM_Reason_for_Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>NATT_CTM_Reason_for_Shipment_Method__c</fullName>
    <description>Why does the Dealer need the selected Shipping Method. If the Dealer selects &quot;Air&quot; as the shipping method, they are use to providing an Emergency Reason for said selection. For example, they might need a part due to a break down, or they need a new unit.</description>
    <label>Reason for Shipment Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>