NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Freight_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Freight_Account_Number__c</fullName>
    <label>Freight Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>