NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Incoterm__c.field-meta.xml
<CustomField>
    <fullName>NATT_Incoterm__c</fullName>
    <label>Incoterm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCA</fullName>
                <default>true</default>
                <label>FCA</label>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>