NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Is_Cart_Primary__c.field-meta.xml
<CustomField>
    <fullName>NATT_Is_Cart_Primary__c</fullName>
    <formula>IF(IsSecondary = false, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cart Primary</label>
    <type>Checkbox</type>
</CustomField>