NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_JDE_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Address_ID__c</fullName>
    <label>JDE Address ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>