NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_JDE_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Order_Type__c</fullName>
    <description>Indicates the type of order in JDE as Stock, Unit Down, or Same Day (2P, 4P, 4G)</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_JDE_Order_Type</valueSetName>
    </valueSet>
</CustomField>