NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Contact__c</fullName>
    <description>Individual or business name for Order Contact</description>
    <label>Order Contact</label>
    <length>96</length>
    <type>Text</type>
</CustomField>