NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Order_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Contact_Email__c</fullName>
    <description>Email address for the order contact</description>
    <label>Order Contact Email</label>
    <type>Email</type>
</CustomField>