NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Order_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Contact_Phone__c</fullName>
    <description>Phone number for the order contact.</description>
    <label>Order Contact Phone</label>
    <type>Phone</type>
</CustomField>