NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Payment_Instruction__c.field-meta.xml
<CustomField>
    <fullName>NATT_Payment_Instruction__c</fullName>
    <description>used to hold the payment instruction to update the order from TES checkout</description>
    <label>Payment Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>