NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Shipment_Terms__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipment_Terms__c</fullName>
    <label>Shipment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Shipment_Terms</valueSetName>
    </valueSet>
</CustomField>