NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Shipping_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_Address_Id__c</fullName>
    <description>NATT: Used in the B2B checkout flow to store the address Id to pass to NATT_Shipping_Address__c</description>
    <label>NATT Shipping Address Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>