NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>