NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_Country__c</fullName>
    <label>Shipping Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>