NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_Method__c</fullName>
    <description>3-Digit JDE code representing the shipping method</description>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Shipment_Method</valueSetName>
    </valueSet>
</CustomField>