NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_Postal_Code__c</fullName>
    <label>Shipping Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>