NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_State__c</fullName>
    <label>Shipping State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>