NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>