NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_TaxPercent__c.field-meta.xml
<CustomField>
    <fullName>NATT_TaxPercent__c</fullName>
    <description>tes tax on the cart</description>
    <label>Tax %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>