NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Transaction_Id__c</fullName>
    <description>Used to store the authorize.net transaction Id if paying with CC.</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>