NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Transaction_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Transaction_Payment_Id__c</fullName>
    <description>used to store the authorize.net payment method Id if using a credit card</description>
    <label>Transaction Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>