NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Translated_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Translated_Status__c</fullName>
    <formula>IF( ISPICKVAL( Status, &apos;Active&apos;) , $Label.NATT_Carts_Active ,
IF( ISPICKVAL( Status, &apos;Checkout&apos;) ,  $Label.NATT_Carts_Checkout ,
&apos;&apos;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NATT Translated Status</label>
    <type>Text</type>
</CustomField>