NATTQA-ENV/force-app/main/default/objects/WebCart/fields/NATT_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>NATT_Warehouse__c</fullName>
    <description>Captures Warehouse value during CTM checkout process.</description>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>