NATTQA-ENV/force-app/main/default/objects/WebCart/fields/Warehouse_selected__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_selected__c</fullName>
    <description>This field stores the selected warehouse by the user who has logged in</description>
    <label>Warehouse_selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>